# dotfiles

./: .Rprofile  .p10k.zsh  .zshrc  README.md  Rsetup.R  installed_dnf.txt  installed_flatpak.txt  requirements-base.txt  requirements-biopy-gpu.txt  requirements-biopy.txt  requirements-gpu.txt  requirements-torch.txt
.config/Kvantum/: kvantum.kvconfig
.config/Kvantum/GenomeDark/: GenomeDark.kvconfig
.local/share/konsole/: MonokaiKonsole.colorscheme  New Profile.profile
python/base/: pyproject.toml
python/biopy/: pyproject.toml
python/lienv/: pyproject.toml
python/ollamenv/: pyproject.toml
python/sqenv/: pyproject.toml
scripts/: zsh-install.sh
