[project]
name = "biopy"
requires-python = ">=3.12"
dependencies = [
    "scanpy[leiden] (>=1.11.1,<2.0.0)",
    "fastcluster (>=1.3.0,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "scvelo (>=0.3.3,<0.4.0)",
    "gseapy (>=1.1.8,<2.0.0)",
    "magic-impute (>=3.0.0,<4.0.0)",
    "muon (>=0.1.7,<0.2.0)",
    "pydeseq2 (>=0.5.1,<0.6.0)",
    "statannotations (>=0.7.2,<0.8.0)",
    "anndata2ri (>=1.3.2,<2.0.0)",
    "decoupler (>=2.0.2,<3.0.0)",
    "scikit-misc (>=0.5.1,<0.6.0)"
]

[tool.poetry]
package-mode = false
