[project]
name = "sqenv"
requires-python = ">=3.12,<3.13"
dependencies = [
    "scanpy[leiden] (>=1.11.1,<2.0.0)",
    "fastcluster (>=1.3.0,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "gseapy (>=1.1.8,<2.0.0)",
    "squidpy (>=1.6.5,<2.0.0)",
]

[tool.poetry]
package-mode = false
